Fix customer name overflow in WeightVisualization and StakesVisualization
Moved their CSS to shared.scss as they used the same exact classes.

--- a/frontend/src/components/CustomerWeightsVisualization.module.scss
+++ b/frontend/src/components/CustomerWeightsVisualization.module.scss
@@ -8,26 +8,6 @@
   gap: 10px;
 }
 
-.customer {
-  @extend .layout-row;
-  gap: 5px;
-  align-items: center;
-
-  &.differsTooMuch > span {
-    color: $COLOR_RASPBERRY;
-  }
-
-  & > .name {
-    flex-grow: 1;
-    margin-right: 8px;
-  }
-
-  & > .percentage {
-    @extend .typography-pre-title;
-    color: $COLOR_AZURE;
-  }
-}
-
 .stakes.light {
   filter: opacity(70%);
 }
